# velollm

./: .gitignore  .rustfmt.toml  AUDIT_VELOLLM.md  BENCHMARKS.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROGRESS.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  TODO.md  TODO_MVP.md  TODO_PHASE2.md  my-baseline.json  my-hardware.json  package.json
.github/workflows/: ci.yml
adapters/llamacpp/: Cargo.toml  README.md  build.rs
adapters/llamacpp/cuda/: paged_attention.cu  paged_attention.cuh
adapters/llamacpp/examples/: speculative_comparison.rs
adapters/llamacpp/src/: cuda_paged.rs  kv_cache.rs  lib.rs
adapters/ollama/: Cargo.toml  README.md
adapters/ollama/src/: lib.rs
benchmarks/speculative/: Cargo.toml  README.md
benchmarks/speculative/src/: main.rs
docs/: ARCHITECTURE.md  TESTING_PROXY.md
docs/api/: hardware_detection.md
docs/fr/: README.md  README_ASCII.md
docs/fr/api/: hardware_detection.md
docs/fr/guides/: BENCHMARKING.md  DEVELOPMENT.md  TESTING.md
docs/fr/research/: speculative_decoding.md
docs/guides/: BENCHMARKING.md  CONFIG_GUIDE.md  DEVELOPMENT.md  TESTING.md
docs/research/: paged_attention.md  speculative_decoding.md
velollm-benchmarks/: Cargo.toml
velollm-benchmarks/src/: lib.rs
velollm-cli/: Cargo.toml
velollm-cli/src/: main.rs
velollm-cli/tests/: integration_test.rs
velollm-core/: Cargo.toml
velollm-core/src/: command.rs  error.rs  hardware.rs  hardware_tests.rs  lib.rs  optimizer.rs  scheduler.rs
velollm-core/src/paged_attention/: block_allocator.rs  block_table.rs  mod.rs
velollm-core/src/parser/: amd.rs  llama.rs  mod.rs  nvidia.rs
velollm-proxy/: Cargo.toml
velollm-proxy/src/: convert.rs  error.rs  lib.rs  main.rs  proxy.rs  state.rs
velollm-proxy/src/batcher/: config.rs  metrics.rs  mod.rs  queue.rs
velollm-proxy/src/cache/: config.rs  exact.rs  metrics.rs  mod.rs  semantic.rs
velollm-proxy/src/compressor/: config.rs  dedup.rs  metrics.rs  mod.rs  system_prompt.rs
velollm-proxy/src/metrics/: mod.rs  prometheus.rs
velollm-proxy/src/optimizer/: mod.rs  tools.rs
velollm-proxy/src/prefetch/: config.rs  metrics.rs  mod.rs  predictor.rs  queue.rs
velollm-proxy/src/router/: complexity.rs  config.rs  metrics.rs  mod.rs
velollm-proxy/src/routes/: health.rs  mod.rs  ollama.rs  openai.rs
velollm-proxy/src/types/: mod.rs  ollama.rs  openai.rs
