[workspace]
resolver = "2"
members = [
    "velollm-core",
    "velollm-cli",
    "velollm-benchmarks", "adapters/llamacpp", "benchmarks/speculative", "adapters/ollama",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VeloLLM Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/velollm"
homepage = "https://github.com/yourusername/velollm"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# System info
sysinfo = "0.31"
num_cpus = "1.16"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for API calls)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Process management
which = "6.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
