[workspace]
resolver = "2"
members = [
    "velollm-core",
    "velollm-cli",
    "velollm-benchmarks",
    "velollm-proxy",
    "adapters/llamacpp",
    "adapters/ollama",
    "benchmarks/speculative",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VeloLLM Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/velollm"
homepage = "https://github.com/yourusername/velollm"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.31"
num_cpus = "1.16"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for API calls)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Process management
which = "6.0"

# Regex parsing
regex = "1.11"
once_cell = "1.20"

# Command execution with timeout
wait-timeout = "0.2"

# HTTP server (for proxy)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
bytes = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# JSON Schema validation (for tool calling)
jsonschema = "0.27"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
