[package]
name = "velollm-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "velollm"
path = "src/main.rs"

[dependencies]
velollm-core = { path = "../velollm-core" }
velollm-benchmarks = { path = "../velollm-benchmarks" }
velollm-adapters-ollama = { path = "../adapters/ollama" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
