[package]
name = "velollm-adapters-llamacpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[[example]]
name = "speculative_comparison"
path = "examples/speculative_comparison.rs"
