[package]
name = "velollm-adapters-llamacpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
# Enable CUDA support for GPU-accelerated paged attention
cuda = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
velollm-core = { path = "../../velollm-core" }
thiserror.workspace = true

[build-dependencies]
# Used for CUDA kernel compilation when cuda feature is enabled
cc = { version = "1.0", optional = true }

[[example]]
name = "speculative_comparison"
path = "examples/speculative_comparison.rs"
